<resources>
    <string name="app_name">스마트 농장</string>
    <string name="userFarmName">준혁이의 농장</string>
    <string name="FarmWeatherIcon_Description">Farm Weather Icon</string>
    <string name="temp_example">온도: 20°C</string>
    <string name="hum_example">습도: 80%</string>
    <string name="humidity_icon">humidity icon</string>
    <string name="temperature_icon">temperature icon</string>
    <string name="_0">0</string>
    <string name="특이사항">특이사항</string>
    <string name="not_have_current">현재 특이사항이 없습니다</string>
    <string name="state_circle">state_circle</string>
    <string name="message_box">messageBox</string>
    <string name="mail_icon">mail_icon</string>
    <string name="weather">날씨</string>
    <string name="weather_info">맑음</string>
    <string name="FarmState">농장 상태</string>
    <string name="cctv_button">CCTV 보기</string>
    <string name="light">조명</string>
    <string name="info">정보</string>
    <string name="turn_on">켜짐</string>
    <string name="pump">펌프</string>
    <string name="fan">환기팬</string>
    <string name="door">개폐기</string>
    <string name="cctv">CCTV</string>
    <string name="lock">lock</string>
    <string name="setPassword">암호를 설정하세요.(4글자)</string>
    <string name="password_hint">비밀번호</string>
    <string name="text_size_4">4글자</string>
    <string name="next_button">nextButton</string>
    <string name="recognize">인식</string>
    <string name="recognize_text">기기에 부착된 코드를 인식합니다</string>
    <string name="farm_connect">농장 등록</string>
    <string name="next">다음</string>
    <string name="input_name">이름 입력</string>
    <string name="setting">setting</string>
    <string name="setting_box">settingBox</string>
    <string name="door_setting">개폐기 설정</string>
    <string name="door_setting_content">개폐기를 어떻게 설정할지 정해주세요.</string>
    <string name="door_set">개폐기 재설정</string>
    <string name="pump_set">펌프 재설정</string>
    <string name="voltage_set">24v 재설정</string>
    <string name="voltage220_set">220v 재설정</string>
    <string name="setting_title">설정</string>
    <string name="farm_Data">농장 설정</string>
    <string name="door_state_setting">농장 자동/수동 재설정</string>
    <string name="farm_delete">농장 삭제</string>
</resources>