<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.SetDoorActivity">

        <TextView
            android:id="@+id/set_door_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/door_setting"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/set_door_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/door_setting_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="112dp"
            app:layout_constraintEnd_toEndOf="@+id/set_door_title"
            app:layout_constraintStart_toStartOf="@+id/set_door_title"
            app:layout_constraintTop_toBottomOf="@+id/set_door_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/auto_door"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/door_background"
            app:layout_constraintBottom_toTopOf="@+id/set_door_next"
            app:layout_constraintHeight_percent="0.21"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/set_door_content"
            app:layout_constraintWidth_percent="0.36">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:src="@drawable/ic_auto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="자동 제어"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manual_door"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/door_background"
            app:layout_constraintBottom_toTopOf="@+id/set_door_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.21"
            app:layout_constraintTop_toBottomOf="@+id/set_door_content"
            app:layout_constraintWidth_percent="0.36">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:src="@drawable/ic_manual"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="수동 제어"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/set_door_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/button_background"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_name_edit"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>